--- a/drivers/staging/android/Kconfig
+++ b/drivers/staging/android/Kconfig
@@ -80,6 +80,14 @@ config ANDROID_LOW_MEMORY_KILLER_AUTODETECT_OOM_ADJ_VALUES
 	  /sys/module/lowmemorykiller/parameters/adj and convert them
 	  to oom_score_adj values.
 
+config ANDROID_LMK_ADJ_RBTREE
+	bool "Use RBTREE for Android Low Memory Killer"
+	depends on ANDROID_LOW_MEMORY_KILLER
+	default N
+	---help---
+	    Use oom_score_adj rbtree to select the best proecss to kill
+	    when system in low memory status.
+
 config ANDROID_LOW_MEMORY_KILLER_DO_NOT_KILL_PROCESS
 	bool "Android Low Memory Killer: do not kill process inside user defined white-lists"
 	depends on ANDROID_LOW_MEMORY_KILLER
