--- a/arch/arm/configs/SkyHigh-LL_defconfig
+++ b/arch/arm/configs/SkyHigh-LL_defconfig
@@ -1452,6 +1452,7 @@ CONFIG_BLK_DEV_DM=y
 # CONFIG_DM_DEBUG is not set
 CONFIG_DM_BUFIO=y
 CONFIG_DM_CRYPT=y
+# CONFIG_DM_REQ_CRYPT is not set
 # CONFIG_DM_SNAPSHOT is not set
 # CONFIG_DM_THIN_PROVISIONING is not set
 # CONFIG_DM_CACHE is not set
@@ -3794,6 +3795,7 @@ CONFIG_NET_VENDOR_SILICOM=y
 # CONFIG_CED1401 is not set
 # CONFIG_DGRP is not set
 CONFIG_ZCACHE=y
+# CONFIG_ZCACHE_DEBUG is not set
 CONFIG_SEC_EXT=y
 CONFIG_SEC_REBOOT=y
 # CONFIG_SEC_MISC is not set
@@ -4527,9 +4529,10 @@ CONFIG_CRYPTO_GF128MUL=y
 CONFIG_CRYPTO_NULL=y
 # CONFIG_CRYPTO_PCRYPT is not set
 CONFIG_CRYPTO_WORKQUEUE=y
-# CONFIG_CRYPTO_CRYPTD is not set
+CONFIG_CRYPTO_CRYPTD=y
 CONFIG_CRYPTO_AUTHENC=y
 CONFIG_CRYPTO_TEST=y
+CONFIG_CRYPTO_ABLK_HELPER=y
 
 #
 # Authenticated Encryption with Associated Data
@@ -4574,7 +4577,7 @@ CONFIG_CRYPTO_SHA1=y
 CONFIG_CRYPTO_SHA1_ARM=y
 CONFIG_CRYPTO_SHA1_ARM_NEON=y
 CONFIG_CRYPTO_SHA256=y
-CONFIG_CRYPTO_SHA256_ARM
+CONFIG_CRYPTO_SHA256_ARM=y
 CONFIG_CRYPTO_SHA512=y
 CONFIG_CRYPTO_SHA512_ARM_NEON=y
 # CONFIG_CRYPTO_TGR192 is not set
