--- a/arch/arm/configs/SkyHigh-LL_defconfig
+++ b/arch/arm/configs/SkyHigh-LL_defconfig
@@ -4209,6 +4209,7 @@ CONFIG_FAT_VIRTUAL_XATTR_SELINUX_LABEL="u:object_r:sdcard_external:s0"
 CONFIG_FAT_SUPPORT_STLOG=y
 CONFIG_EXFAT_FS=y
 CONFIG_EXFAT_VIRTUAL_XATTR=y
+CONFIG_EXFAT_VIRTUAL_XATTR_SELINUX_LABEL="u:object_r:sdcard_external:s0"
 CONFIG_EXFAT_SUPPORT_STLOG=y
 CONFIG_NTFS_FS=y
 # CONFIG_NTFS_DEBUG is not set
